dalsza czesc prac

--- a/css/styles.css
+++ b/css/styles.css
@@ -10117,8 +10117,8 @@ img::-moz-selection {
     transition: height 0.3s ease-in-out;
   }
   #mainNav.navbar-shrink {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: #212529;
     color: white !important;
   }
