--- a/css/style2.css
+++ b/css/style2.css
@@ -12,8 +12,12 @@ body {
         padding-bottom: 15px;
     }
 }
+@media (max-width: 992px) {
+    .navbarPills {
+        color: white !important;
+    }
+}
 .main-h1 {
-
     border-bottom: 3px solid orange;
     padding: 20px;
     margin: 10px;
@@ -24,7 +28,42 @@ body {
 .navbarPills {
     color: var(--darkGrey) !important;
     font-size: 20px !important;
+    transition: all ease 0.3s;
+}
+.navbarPills:hover {
+    color: orange !important;
 }
 .navbar-shrink div div ul li a {
     color: white !important;
+}
+.profilImg {
+    margin: 0;
+    padding: 0;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    background-attachment: fixed;
+    width: 100%;
+    height: 230px;
+    background-image: url("../assets/img/profil.jpg");
+}
+.profilTexth2 {
+    border-bottom: 3px solid orange;
+}
+.profilUl li{
+    margin-bottom: 20px;
+    font-size: 30px;
+}
+.profilUl {
+    list-style: none;
+}
+.profilUlRightImg {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("../assets/img/profil.jpg");
+    clip-path: polygon(0 1%, 100% 0%, 100% 100%, 8% 88%);
+}
+.profilUl li::before {
+    content: "• ";
+    color: orange; /* or whatever color you prefer */
 }
