--- a/css/style2.css
+++ b/css/style2.css
@@ -3,6 +3,10 @@ body {
     --lightGrey: #666666;
     --lightWhite: #dadad3;
     --skinColor: #dad2c0;
+    color: var(--lightGrey);
+}
+.headerColor {
+    color: var(--darkGrey);
 }
 @media (min-width: 768px) {
     .main-h1 {
@@ -66,4 +70,52 @@ body {
 .profilUl li::before {
     content: "• ";
     color: orange; /* or whatever color you prefer */
+}
+.wyrImg {
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("../assets/img/wyrImg.jpg");
+}
+.wyrItem {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    font-size: 25px;
+}
+.lastWyrItem {
+    margin-bottom: 100px;
+}
+.wyrDiv {
+    color: var(--lightGrey);
+    margin-top: 150px;
+}
+.profilDiv {
+    margin-top: 25px;
+    color: var(--lightGrey);
+}
+.strategyDiv {
+    clip-path: polygon(0 1%, 100% 0, 100% 78%, 0 100%);
+    height: 75vh;
+    background-image: url("../assets/img/footerImg.jpg");
+}
+.contactDiv {
+    font-size: 20px;
+    margin-right: 150px;
+}
+.imgFooterDiv {
+    padding: 50px;
+}
+.strategyText {
+    padding: 50px;
+    font-size: 30px;
+}
+.abUsHeader {
+
+}
+.abUsH4 {
+    color: var(--darkGrey);
+    font-size: 33px;
+}
+.abUsP {
+    font-size: 20px;
 }
