--- a/css/style2.css
+++ b/css/style2.css
@@ -14,6 +14,7 @@ body {
 }
 @media (min-width: 768px) {
     .main-h1 {
+        font-size: 80px !important;
         float: right;
         padding-right: 100px;
         text-align: right;
@@ -47,8 +48,8 @@ body {
     border-bottom: 3px solid orange;
     padding: 20px;
     margin: 10px;
-    font-size: 58px;
-    font-weight: normal;
+    font-size: 60px;
+    font-weight: 400;
     color: var(--darkGrey);
 }
 .navbarPills {
@@ -74,6 +75,7 @@ body {
     background-image: url("../assets/img/profil.jpg");
 }
 .profilTexth2 {
+    font-weight: 400;
     border-bottom: 3px solid orange;
 }
 .profilUl li{
@@ -94,7 +96,6 @@ body {
     color: orange; /* or whatever color you prefer */
 }
 .wyrImg {
-
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("../assets/img/wyrImg.jpg");
@@ -133,7 +134,7 @@ body {
     font-size: 30px;
 }
 .abUsHeader {
-
+    font-weight: 400;
 }
 .abUsH4 {
     color: var(--darkGrey);
