--- a/css/style2.css
+++ b/css/style2.css
@@ -52,6 +52,7 @@ body {
         color: white !important;
     }
 }
+
 .main-h1 {
     border-bottom: 3px solid orange;
     padding: 20px;
@@ -59,6 +60,10 @@ body {
     font-size: 60px;
     font-weight: 400;
     color: var(--darkGrey);
+}
+.main-h1-2 {
+    font-size: 50px;
+    padding: 0;
 }
 .navbarPills {
     font-size: 20px !important;
