--- a/css/style2.css
+++ b/css/style2.css
@@ -19,6 +19,13 @@ body {
     background-size: cover;
     padding: 50px 0 50px 0;
 }
+.inputCon {
+    border: 2px solid #737373;
+}
+.sendBtn {
+    font-size: 22px;
+    padding: 15px;
+}
 @media (max-width: 992px) {
     .fbIcon {
         font-size: 45px !important;
